[package]
name = "ank"
description = "Arch new kernel?"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/sermuns/ank"
license = "WTFPL"
categories = ["command-line-utilities"]
authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
